chore: run balck and flake8-doctring

--- a/rename_files.ipynb
+++ b/rename_files.ipynb
@@ -48,10 +48,7 @@
    "outputs": [],
    "source": [
     "papers_names = glob.glob(f\"{arxiv_dir}/*.pdf\")\n",
-    "papers_names = [\n",
-    "    name.split(\"/\")[-1]\\\n",
-    "    for name in papers_names\n",
-    "]"
+    "papers_names = [name.split(\"/\")[-1] for name in papers_names]"
    ]
   },
   {
@@ -97,8 +94,8 @@
     "# replace colons with underscores\n",
     "# replace semicolons with underscores\n",
     "\n",
-    "def replace_special_characters(name):\n",
     "\n",
+    "def replace_special_characters(name):\n",
     "    name = name.replace(\" \", \"_\")\n",
     "    name = name.replace(\"-\", \"_\")\n",
     "    name = name.replace(\",\", \"_\")\n",
@@ -122,20 +119,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_names = [\n",
-    "    replace_special_characters(name)\\\n",
-    "    for name in papers_names\n",
-    "]\n",
+    "new_names = [replace_special_characters(name) for name in papers_names]\n",
     "# doble underscore to single underscore\n",
-    "new_names = [\n",
-    "    name.replace(\"__\", \"_\")\\\n",
-    "    for name in new_names\n",
-    "]\n",
+    "new_names = [name.replace(\"__\", \"_\") for name in new_names]\n",
     "# lowercase\n",
-    "new_names = [\n",
-    "    name.lower()\\\n",
-    "    for name in new_names\n",
-    "]"
+    "new_names = [name.lower() for name in new_names]"
    ]
   },
   {
@@ -181,10 +169,7 @@
     "# rename files\n",
     "for old_name, new_name in zip(papers_names, new_names):\n",
     "    print(f\"Renaming {old_name} to {new_name}\")\n",
-    "    os.rename(\n",
-    "        f\"{arxiv_dir}/{old_name}\",\n",
-    "        f\"{arxiv_dir}/{new_name}\"\n",
-    "    )\n"
+    "    os.rename(f\"{arxiv_dir}/{old_name}\", f\"{arxiv_dir}/{new_name}\")"
    ]
   },
   {
@@ -206,13 +191,14 @@
    ],
    "source": [
     "import os\n",
+    "\n",
     "# create directory per paper name\n",
     "# removing .pdf extension\n",
     "\n",
     "for name in new_names:\n",
     "    name = name.replace(\".pdf\", \"\")\n",
     "    print(f\"Creating directory {name}\")\n",
-    "    os.mkdir(f\"{arxiv_dir}/{name}\")\n"
+    "    os.mkdir(f\"{arxiv_dir}/{name}\")"
    ]
   },
   {
@@ -237,10 +223,7 @@
     "for name in new_names:\n",
     "    name = name.replace(\".pdf\", \"\")\n",
     "    print(f\"Moving {name}.pdf to {name}\")\n",
-    "    os.rename(\n",
-    "        f\"{arxiv_dir}/{name}.pdf\",\n",
-    "        f\"{arxiv_dir}/{name}/{name}.pdf\"\n",
-    "    )"
+    "    os.rename(f\"{arxiv_dir}/{name}.pdf\", f\"{arxiv_dir}/{name}/{name}.pdf\")"
    ]
   },
   {
